package pt.ipp.isep.dei.dto;

public class GenerationStatisticsDTO {
    public GenerationStatisticsDTO() { throw new UnsupportedOperationException("Not implemented yet"); }
    public double averageCargoPerStation;
    public double totalVolume;
    public double distributionEfficiency;
}
