package pt.ipp.isep.dei.mapper;

import java.util.List;

import pt.ipp.isep.dei.domain.map.Station;
import pt.ipp.isep.dei.dto.CargoGenerationResultDTO;

public class CargoGenerationMapper {

}
